--- a/web/inventario/View.xhtml
+++ b/web/inventario/View.xhtml
@@ -43,6 +43,8 @@
                         <h:outputText value="#{bundle.ViewInventarioLabel_idUsuario}"/>
                         <h:outputText value="#{inventarioController.selected.idUsuario}" title="#{bundle.ViewInventarioTitle_idUsuario}"/>
                     </p:panelGrid>
+                    <p:commandButton style="width: 70px" actionListener="#{entregaController.correoMasivo()}" value="Masivo" update="display,:InventarioListForm:datalist,:growl"/>
+                    <p:commandButton style="width: 70px" actionListener="#{entregaController.notificar()}" value="Notificar 1" update="display,:InventarioListForm:datalist,:growl"/>
                     <p:commandButton style="width: 70px" value="#{bundle.Close}" onclick="InventarioViewDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
